<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="themollo.app.mollo.survey.survey_fragment.Survey_p5">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87.5dp"
        android:gravity="center"
        android:letterSpacing="0"
        android:lineSpacingExtra="6.5sp"
        android:text="@string/survey_5_text"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="59dp"
        android:paddingRight="59dp">

        <LinearLayout
            android:id="@+id/llsymp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivsymp1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp1"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsymp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivsymp2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp2"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsymp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivsymp3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp3"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsymp4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivsymp4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp4"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsymp5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivsymp5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsymp6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivsymp6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp6"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsymp7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivsymp7"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp7"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsymp8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivsymp8"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp8"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsymp9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivsymp9"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/radio_not_clicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symp9"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
