<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appColor"
    tools:context="themollo.app.mollo.login.sns_login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="50dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/login"/>

    <com.kakao.usermgmt.LoginButton
        android:id="@+id/btKakaoLogin"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_gravity="center">

    </com.kakao.usermgmt.LoginButton>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btFacebook"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/llFacebookButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/facebook_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/facebook_button_color"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:text="@string/facebook_login"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/llKakaoButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/kakao_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kakao_button_color"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:text="@string/kakao_login"/>


    </LinearLayout>

    <Button
        android:id="@+id/btSignIn"
        android:background="@drawable/login_button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/email_login"
        android:textSize="18dp"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/btAnonySignIn"
        android:background="@drawable/login_button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/anonymous_login"
        android:textSize="18dp"
        android:textColor="#fff"/>





</LinearLayout>
