<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="360dp"
    android:background="@color/appColor"
    tools:context="themollo.app.mollo.survey.SurveyResultPopup">

    <LinearLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/survey_result"
            android:textSize="18dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#aaa"
        android:layout_below="@id/rlTop"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>



    <LinearLayout
        android:id="@+id/llSleepScore"
        android:layout_below="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_sleep_score"
                android:textColor="#fff"
                android:textSize="18dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tvSleepScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="91"
                    android:textColor="#fff"
                    android:textSize="50dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/points"
                    android:textColor="#fff"
                    android:textSize="25dp" />
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRecommend"
        android:layout_below="@+id/llSleepScore"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/diffuser_scent_recommended"
                android:textColor="#fff"
                android:textSize="18dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#fff"
                android:layout_centerInParent="true"
                android:text="@string/peppermint"/>


        </RelativeLayout>

    </LinearLayout>




    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#aaa"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_above="@id/llConfirm"/>

    <LinearLayout
        android:id="@+id/llConfirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18dp"
            android:text="@string/confirm"/>


    </LinearLayout>


</RelativeLayout>
